--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -879,6 +879,9 @@
   <ItemGroup>
     <None Include="pic\detail-icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="pic\kaydediliyor.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
