--- a/IhalematikPro/App.config
+++ b/IhalematikPro/App.config
@@ -13,6 +13,9 @@
       <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=L0720014;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />-->
       <!-- Samet -->
   </connectionStrings>
+  <appSettings>
+    <add key="EnableCaching" value="True" />
+  </appSettings>
    <cachingConfiguration defaultCacheManager="CacheManager">
     <cacheManagers>
       <add name="CacheManager" type="Microsoft.Practices.EnterpriseLibrary.Caching.CacheManager, Microsoft.Practices.EnterpriseLibrary.Caching, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" expirationPollFrequencyInSeconds="60" maximumElementsInCacheBeforeScavenging="100000" numberToRemoveWhenScavenging="10" backingStoreName="NullBackingStore" />
