--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -449,8 +449,10 @@
     <Compile Include="Model\IhalematikModelBase.cs" />
     <Compile Include="Model\MaterialListModel.cs" />
     <Compile Include="Model\OBFModel.cs" />
+    <Compile Include="Model\OfferMaterialListModel.cs" />
     <Compile Include="Model\PozModel.cs" />
     <Compile Include="Model\ReportModel.cs" />
+    <Compile Include="Model\SupplierModel.cs" />
     <Compile Include="Model\TenderGroupModel.cs" />
     <Compile Include="Model\TenderMaterialListEquipmentModel.cs" />
     <Compile Include="Model\TitleModel.cs" />
