--- a/IhalematikProBL/IhalematikProBL.csproj
+++ b/IhalematikProBL/IhalematikProBL.csproj
@@ -119,9 +119,11 @@
     <Compile Include="Entity\MaterialList.cs" />
     <Compile Include="Entity\OBF.cs" />
     <Compile Include="Entity\Offer.cs" />
+    <Compile Include="Entity\OfferMaterialList.cs" />
     <Compile Include="Entity\Poz.cs" />
     <Compile Include="Entity\Rule.cs" />
     <Compile Include="Entity\Supplier.cs" />
+    <Compile Include="Entity\SupplierMaterialList.cs" />
     <Compile Include="Entity\SupplierSegment.cs" />
     <Compile Include="Entity\Tender.cs" />
     <Compile Include="Entity\TenderEquipment.cs" />
@@ -143,9 +145,11 @@
     <Compile Include="Provider\CustomEntityBaseProvider.cs" />
     <Compile Include="Provider\MaterialListProvider.cs" />
     <Compile Include="Provider\OBFProvider.cs" />
+    <Compile Include="Provider\OfferMaterialListProvider.cs" />
     <Compile Include="Provider\OfferProvider.cs" />
     <Compile Include="Provider\PozProvider.cs" />
     <Compile Include="Provider\RuleProvider.cs" />
+    <Compile Include="Provider\SupplierMaterialListProvider.cs" />
     <Compile Include="Provider\SupplierProvider.cs" />
     <Compile Include="Provider\SupplierSegmentProvider.cs" />
     <Compile Include="Provider\TenderEquipmentProvider.cs" />
