--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -905,6 +905,12 @@
   <ItemGroup>
     <None Include="pic\kaydediliyor.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="pic\email-send-icon %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="pic\Go-back-icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
