Tüm formların Tool Tipleri etkinleştirildi

--- a/IhalematikPro/App.config
+++ b/IhalematikPro/App.config
@@ -3,6 +3,9 @@
   <configSections>
     <section name="cachingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Caching.Configuration.CacheManagerSettings, Microsoft.Practices.EnterpriseLibrary.Caching, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
     <section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="IhalematikProUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
     <connectionStrings>
       <!-- Feyzullah -->
@@ -27,4 +30,11 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
+  <userSettings>
+    <IhalematikProUI.Properties.Settings>
+      <setting name="sayfa" serializeAs="String">
+        <value>1</value>
+      </setting>
+    </IhalematikProUI.Properties.Settings>
+  </userSettings>
 </configuration>
