--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -920,6 +920,18 @@
   <ItemGroup>
     <None Include="pic\Go-back-icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logoR.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SoftwareLogo.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logomuz.PNG" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
