--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -327,6 +327,12 @@
     <Compile Include="Forms\Genel\frm_ProgramHakkinda.Designer.cs">
       <DependentUpon>frm_ProgramHakkinda.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Tedarikci\frm_TedarikciGuncelleme.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Tedarikci\frm_TedarikciGuncelleme.Designer.cs">
+      <DependentUpon>frm_TedarikciGuncelleme.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Tedarikci\frm_TedarikcilerdenFiyatAl.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -552,6 +558,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Genel\frm_ProgramHakkinda.resx">
       <DependentUpon>frm_ProgramHakkinda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Tedarikci\frm_TedarikciGuncelleme.resx">
+      <DependentUpon>frm_TedarikciGuncelleme.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Tedarikci\frm_TedarikcilerdenFiyatAl.resx">
       <DependentUpon>frm_TedarikcilerdenFiyatAl.cs</DependentUpon>
