aktif pasiv buttonları güncellendi

--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -956,7 +956,12 @@
   <ItemGroup>
     <None Include="Resources\logomuz.PNG" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\activeData.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PasiveData.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
