--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -333,6 +333,12 @@
     <Compile Include="Forms\Tedarikci\frm_GonderilecekMalzemeListesi.Designer.cs">
       <DependentUpon>frm_GonderilecekMalzemeListesi.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Tedarikci\frm_MalzemeBazindaTedarikciFiyatDetay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Tedarikci\frm_MalzemeBazindaTedarikciFiyatDetay.Designer.cs">
+      <DependentUpon>frm_MalzemeBazindaTedarikciFiyatDetay.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Tedarikci\frm_TedarikciGuncelleme.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -573,6 +579,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Tedarikci\frm_GonderilecekMalzemeListesi.resx">
       <DependentUpon>frm_GonderilecekMalzemeListesi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Tedarikci\frm_MalzemeBazindaTedarikciFiyatDetay.resx">
+      <DependentUpon>frm_MalzemeBazindaTedarikciFiyatDetay.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Tedarikci\frm_TedarikciGuncelleme.resx">
       <DependentUpon>frm_TedarikciGuncelleme.cs</DependentUpon>
