--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -980,6 +980,18 @@
   <ItemGroup>
     <None Include="Resources\PasiveData.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Check-icon %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Check-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tick-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mail-send-icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
