--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -995,6 +995,9 @@
   <ItemGroup>
     <None Include="Resources\ui-check-box-uncheck-icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\check-box-icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
