--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -225,6 +225,12 @@
     <Compile Include="Forms\Genel\frm_GenelBilgiler.Designer.cs">
       <DependentUpon>frm_GenelBilgiler.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Genel\frm_PozlariOnlineGuncelle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Genel\frm_PozlariOnlineGuncelle.Designer.cs">
+      <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Ihale\frm_IhaleBilgisiDetay.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -525,6 +531,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Genel\frm_GenelBilgiler.resx">
       <DependentUpon>frm_GenelBilgiler.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Genel\frm_PozlariOnlineGuncelle.resx">
+      <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Ihale\frm_IhaleBilgisiDetay.resx">
       <DependentUpon>frm_IhaleBilgisiDetay.cs</DependentUpon>
@@ -1021,6 +1030,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\network-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\network-icon321.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
