--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -339,6 +339,12 @@
     <Compile Include="Forms\Tedarikci\frm_GonderilecekMalzemeListesi.Designer.cs">
       <DependentUpon>frm_GonderilecekMalzemeListesi.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Tedarikci\frm_MalzemeAdlandir.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Tedarikci\frm_MalzemeAdlandir.Designer.cs">
+      <DependentUpon>frm_MalzemeAdlandir.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Tedarikci\frm_MalzemeBazindaTedarikciFiyatDetay.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -588,6 +594,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Tedarikci\frm_GonderilecekMalzemeListesi.resx">
       <DependentUpon>frm_GonderilecekMalzemeListesi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Tedarikci\frm_MalzemeAdlandir.resx">
+      <DependentUpon>frm_MalzemeAdlandir.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Tedarikci\frm_MalzemeBazindaTedarikciFiyatDetay.resx">
       <DependentUpon>frm_MalzemeBazindaTedarikciFiyatDetay.cs</DependentUpon>
