--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -667,6 +667,9 @@
     <EmbeddedResource Include="Forms\Tedarikci\frm_YeniTeklifOlustur.resx">
       <DependentUpon>frm_YeniTeklifOlustur.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Tedarikci\frm_YeniTeklifOlustur.tr-TR.resx">
+      <DependentUpon>frm_YeniTeklifOlustur.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
