--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -225,6 +225,18 @@
     <Compile Include="Forms\Genel\frm_GenelBilgiler.Designer.cs">
       <DependentUpon>frm_GenelBilgiler.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Genel\frm_LisansSozlesmesi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Genel\frm_LisansSozlesmesi.Designer.cs">
+      <DependentUpon>frm_LisansSozlesmesi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Genel\frm_LisasnKontrolFormu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Genel\frm_LisasnKontrolFormu.Designer.cs">
+      <DependentUpon>frm_LisasnKontrolFormu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Genel\frm_PozlariOnlineGuncelle.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -543,6 +555,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Genel\frm_GenelBilgiler.resx">
       <DependentUpon>frm_GenelBilgiler.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Genel\frm_LisansSozlesmesi.resx">
+      <DependentUpon>frm_LisansSozlesmesi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Genel\frm_LisasnKontrolFormu.resx">
+      <DependentUpon>frm_LisasnKontrolFormu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Genel\frm_PozlariOnlineGuncelle.resx">
       <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
