--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -1073,6 +1073,9 @@
   <ItemGroup>
     <None Include="Resources\network-icon321.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cross-script-icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
