--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -186,8 +186,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\Arac\frm_CarGuncelle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Arac\frm_CarGuncelle.Designer.cs">
+      <DependentUpon>frm_CarGuncelle.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Base\IhalematikBaseForm.cs">
       <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Calisan\frm_WorkerGuncelle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Calisan\frm_WorkerGuncelle.Designer.cs">
+      <DependentUpon>frm_WorkerGuncelle.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Genel\frm_Anaform.cs">
       <SubType>Form</SubType>
@@ -314,6 +326,12 @@
     </Compile>
     <Compile Include="Forms\Genel\frm_DovizKurlari.Designer.cs">
       <DependentUpon>frm_DovizKurlari.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Tedarikci\frm_activityGuncelle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Tedarikci\frm_activityGuncelle.Designer.cs">
+      <DependentUpon>frm_activityGuncelle.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Tedarikci\frm_FaalitetAlaniEkle.cs">
       <SubType>Form</SubType>
@@ -541,8 +559,14 @@
     <Compile Include="Report\MainReport.Designer.cs">
       <DependentUpon>MainReport.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\Arac\frm_CarGuncelle.resx">
+      <DependentUpon>frm_CarGuncelle.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Base\IhalematikBaseForm.resx">
       <DependentUpon>IhalematikBaseForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Calisan\frm_WorkerGuncelle.resx">
+      <DependentUpon>frm_WorkerGuncelle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Genel\frm_Anaform.resx">
       <DependentUpon>frm_Anaform.cs</DependentUpon>
@@ -606,6 +630,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Genel\frm_DovizKurlari.resx">
       <DependentUpon>frm_DovizKurlari.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Tedarikci\frm_activityGuncelle.resx">
+      <DependentUpon>frm_activityGuncelle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Tedarikci\frm_FaalitetAlaniEkle.resx">
       <DependentUpon>frm_FaalitetAlaniEkle.cs</DependentUpon>
