--- a/IhalematikPro/App.config
+++ b/IhalematikPro/App.config
@@ -9,11 +9,11 @@
   </configSections>
     <connectionStrings>
       <!-- Feyzullah -->
-      <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB" providerName="System.Data.SqlClient" />-->
+      <add name="Stonefish.Sabre.MSSQL" connectionString="server=.\MSSQLSErVER2014;user id=sa;password=Stonefish1;initial catalog=IhalematikDB" providerName="System.Data.SqlClient" />
       <!-- Feyzullah -->
       
       <!-- Samet -->
-      <add name="Stonefish.Sabre.MSSQL" connectionString="server=L0720014;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />
+      <!--<add name="Stonefish.Sabre.MSSQL" connectionString="server=L0720014;initial catalog=IhalematikDB; Integrated Security=true" providerName="System.Data.SqlClient" />-->
       <!-- Samet -->
   </connectionStrings>
   <appSettings>
@@ -22,9 +22,9 @@
     <!--Email-->
     <add key="SmtpAdress" value="smtp.gmail.com" />
     <add key="SmtpPort" value="587" />
-    <add key="SmtpUserName" value="feyzullahgezici" />
+    <!--<add key="SmtpUserName" value="feyzullahgezici" />
     <add key="SmtpPassword" value="FG!Selcuk!86" />
-    <add key="SmtpMailSender" value="feyzullahgezici@gmail.com" />
+    <add key="SmtpMailSender" value="feyzullahgezici@gmail.com" />-->
     <add key="SmtpMailSenderDisplayName" value="Ihalematik - Development" />
   </appSettings>
    <cachingConfiguration defaultCacheManager="CacheManager">
