--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -273,6 +273,12 @@
     <Compile Include="Forms\Genel\frm_PozlariOnlineGuncelle.Designer.cs">
       <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\IhaleAdim\frm_BirimFiyatHistory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\IhaleAdim\frm_BirimFiyatHistory.Designer.cs">
+      <DependentUpon>frm_BirimFiyatHistory.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\IhaleAdim\frm_Iscilik.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -604,6 +610,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Genel\frm_PozlariOnlineGuncelle.resx">
       <DependentUpon>frm_PozlariOnlineGuncelle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\IhaleAdim\frm_BirimFiyatHistory.resx">
+      <DependentUpon>frm_BirimFiyatHistory.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\IhaleAdim\frm_Iscilik.resx">
       <DependentUpon>frm_Iscilik.cs</DependentUpon>
