--- a/IhalematikLicance/IhalematikLicance.csproj
+++ b/IhalematikLicance/IhalematikLicance.csproj
@@ -56,17 +56,17 @@
     <Compile Include="CustomInstall.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="License.cs">
+    <Compile Include="LicenseControl.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="License.Designer.cs">
-      <DependentUpon>License.cs</DependentUpon>
+    <Compile Include="LicenseControl.Designer.cs">
+      <DependentUpon>LicenseControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="LicenseAgreement.cs">
+    <Compile Include="LicenseKey.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LicenseAgreement.Designer.cs">
-      <DependentUpon>LicenseAgreement.cs</DependentUpon>
+    <Compile Include="LicenseKey.Designer.cs">
+      <DependentUpon>LicenseKey.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -79,11 +79,11 @@
     <EmbeddedResource Include="Administrator.resx">
       <DependentUpon>Administrator.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="License.resx">
-      <DependentUpon>License.cs</DependentUpon>
+    <EmbeddedResource Include="LicenseControl.resx">
+      <DependentUpon>LicenseControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LicenseAgreement.resx">
-      <DependentUpon>LicenseAgreement.cs</DependentUpon>
+    <EmbeddedResource Include="LicenseKey.resx">
+      <DependentUpon>LicenseKey.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
